# jax

./: pyproject.toml
jax/_src/: abstract_arrays.py  ad_checkpoint.py  ad_util.py  api.py  api_util.py  array.py  basearray.py  basearray.pyi  cache_key.py  callback.py  checkify.py  compilation_cache.py  compilation_cache_interface.py  compiler.py  config.py  core.py  custom_batching.py  custom_derivatives.py  custom_transpose.py  debugging.py  dispatch.py  dlpack.py  dtypes.py  environment_info.py  flatten_util.py  gfile_cache.py  jaxpr_util.py  linear_util.py  maps.py  mesh.py  pjit.py  prng.py  profiler.py  public_test_util.py  random.py  sharding_impls.py  sharding_specs.py  source_info_util.py  stages.py  test_util.py  (+6 more)
jax/_src/clusters/: __init__.py  cloud_tpu_cluster.py  cluster.py  ompi_cluster.py  slurm_cluster.py
jax/_src/debugger/: __init__.py  colab_debugger.py  colab_lib.py  core.py
jax/_src/image/: scale.py
jax/_src/internal_test_util/: lax_test_util.py
jax/_src/interpreters/: __init__.py  ad.py  batching.py  exir.py  mlir.py  partial_eval.py  pxla.py  xla.py
jax/_src/lax/: __init__.py  ann.py  conv.py  eigh.py  fft.py  lax.py  linalg.py  other.py  parallel.py  qdwh.py  slicing.py  special.py  stack.py  svd.py  utils.py  windowed_reductions.py
jax/_src/lax/control_flow/: __init__.py  common.py  conditionals.py  for_loop.py  loops.py  solves.py
jax/_src/lib/: __init__.py
jax/_src/lib/mlir/dialects/: __init__.py
jax/_src/nn/: functions.py  initializers.py
jax/_src/numpy/: array_methods.py  fft.py  index_tricks.py  lax_numpy.py  linalg.py  polynomial.py  reductions.py  setops.py  ufunc_api.py  ufuncs.py  util.py  vectorize.py
jax/_src/ops/: scatter.py  special.py
jax/_src/pallas/: core.py  indexing.py  pallas_call.py  primitives.py  utils.py
jax/_src/pallas/mosaic/: __init__.py  core.py  kernel_regeneration_util.py  lowering.py  pallas_call_registration.py  primitives.py
jax/_src/pallas/triton/: __init__.py  lowering.py
jax/_src/scipy/: fft.py  integrate.py  linalg.py  ndimage.py  signal.py  special.py
jax/_src/scipy/cluster/: vq.py
jax/_src/scipy/optimize/: _lbfgs.py  bfgs.py  line_search.py  minimize.py
jax/_src/scipy/sparse/: linalg.py
jax/_src/scipy/spatial/: transform.py
jax/_src/scipy/stats/: _core.py  bernoulli.py  beta.py  betabinom.py  binom.py  cauchy.py  chi2.py  dirichlet.py  expon.py  gamma.py  gennorm.py  geom.py  kde.py  laplace.py  logistic.py  multinomial.py  multivariate_normal.py  nbinom.py  norm.py  pareto.py  poisson.py  t.py  truncnorm.py  uniform.py  vonmises.py
jax/_src/state/: __init__.py  discharge.py  primitives.py  types.py  utils.py
tests/: ann_test.py  aot_test.py  api_test.py  api_util_test.py  array_interoperability_test.py  array_test.py  batching_test.py  cache_key_test.py  checkify_test.py  clear_backends_test.py  compilation_cache_test.py  core_test.py  custom_linear_solve_test.py  custom_object_test.py  custom_root_test.py  debug_nans_test.py  debugger_test.py  debugging_primitives_test.py  deprecation_test.py  dtypes_test.py  dynamic_api_test.py  errors_test.py  experimental_rnn_test.py  export_test.py  extend_test.py  fft_test.py  for_loop_test.py  generated_fun_test.py  heap_profiler_test.py  host_callback_test.py  host_callback_to_tf_test.py  image_test.py  infeed_test.py  jax_jit_test.py  jax_to_ir_test.py  jaxpr_effects_test.py  jaxpr_util_test.py  jet_test.py  lax_autodiff_test.py  lax_control_flow_test.py  (+68 more)
tests/filecheck/: array.filecheck.py  custom_call.filecheck.py  jax_filecheck_helpers.py  math.filecheck.py  names.filecheck.py  shapes.filecheck.py  subcomputations.filecheck.py
tests/pallas/: indexing_test.py  pallas_test.py
