[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
show_error_codes = true
disable_error_code = "attr-defined, name-defined, annotation-unchecked"
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "absl.*",
    "colorama.*",
    "importlib_metadata.*",
    "IPython.*",
    "numpy.*",
    "opt_einsum.*",
    "scipy.*",
    "libtpu.*",
    "jaxlib.mlir.*",
    "iree.*",
    "rich.*",
    "optax.*",
    "flax.*",
    "tensorflow.*",
    "tensorflowjs.*",
    "tensorflow.io.*",
    "tensorstore.*",
    "web_pdb.*",
    "etils.*",
    "google.colab.*",
    "pygments.*",
    "jraph.*",
    "matplotlib.*",
    "tensorboard_plugin_profile.convert.*",
    "jaxlib.*",
    "pytest.*",
    "zstandard.*",
    "jax.experimental.jax2tf.tests.flax_models",
    "jax.experimental.jax2tf.tests.back_compat_testdata",
    "setuptools.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "jax.interpreters.autospmd",
    "jax.lax.lax_parallel",
    "jax.experimental.jax2tf.tests.primitive_harness"
]
ignore_errors = true

[tool.pytest.ini_options]
markers = [
    "multiaccelerator: indicates that a test can make use of and possibly requires multiple accelerators",
    "SlurmMultiNodeGpuTest: mark a test for Slurm multinode GPU nightly CI"
]
filterwarnings = [
    "error",
    "ignore:No GPU/TPU found, falling back to CPU.:UserWarning",
    "ignore:xmap is an experimental feature and probably has bugs!",
    "ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning",
    "ignore:can't resolve package from __spec__ or __package__:ImportWarning",
    "ignore:Using or importing the ABCs.*:DeprecationWarning",
    "ignore:numpy.ufunc size changed",
    "ignore:.*experimental feature",
    "ignore:The distutils.* is deprecated.*:DeprecationWarning",
    "default:Error reading persistent compilation cache entry for 'jit__lambda_'",
    "default:Error writing persistent compilation cache entry for 'jit__lambda_'",
    "ignore:backend and device argument on jit is deprecated.*:DeprecationWarning",
    # TODO(skyewm): remove when jaxlib >= 0.4.12 is released (needs
    # https://github.com/openxla/xla/commit/fb9dc3db0999bf14c78d95cb7c3aa6815221ddc7)
    "ignore:ml_dtypes.float8_e4m3b11 is deprecated.",
    "ignore:JAX_USE_PJRT_C_API_ON_TPU=false will no longer be supported.*:UserWarning",
    "ignore:np.find_common_type is deprecated.*:DeprecationWarning",
    "ignore:jax.numpy.in1d is deprecated.*:DeprecationWarning",
    "ignore:jax.numpy.trapz is deprecated.*:DeprecationWarning",
]
doctest_optionflags = [
    "NUMBER",
    "NORMALIZE_WHITESPACE"
]
addopts = "--doctest-glob='*.rst'"

[tool.pylint.master]
extension-pkg-whitelist = "numpy"

[tool.pylint."messages control"]
disable = [
    "missing-docstring",
    "too-many-locals",
    "invalid-name",
    "redefined-outer-name",
    "redefined-builtin",
    "protected-name",
    "no-else-return",
    "fixme",
    "protected-access",
    "too-many-arguments",
    "blacklisted-name",
    "too-few-public-methods",
    "unnecessary-lambda"
]
enable = "c-extension-no-member"

[tool.pylint.format]
indent-string=" "

[tool.isort]
profile = "google"

combine_as_imports = true
known_first_party = ["jax", "jaxlib"]
known_local_folder = ["jax._src"]
known_third_party = ["numpy", "scipy"]
multi_line_output = 4
src_paths = ["jax/_src", "tests"]
single_line_exclusions = [
    "collections",
    "collections.abc",
    "contextlib",
    "functools",
    "typing",

    "jax._src.ad_util",
    "jax._src.api_util",
    "jax._src.checkify",
    "jax._src.config",
    "jax._src.core",
    "jax._src.errors",
    "jax._src.lax.control_flow.common",
    "jax._src.lax.control_flow.conditionals",
    "jax._src.lax.control_flow.loops",
    "jax._src.lax.control_flow.solves",
    "jax._src.lax.lax",
    "jax._src.lax.utils",
    "jax._src.numpy.lax_numpy",
    "jax._src.numpy.reductions",
    "jax._src.numpy.util",
    "jax._src.public_test_util",
    "jax._src.scipy.special",
    "jax._src.sharding_impls",
    "jax._src.state.types",
    "jax._src.tree_util",
    "jax._src.typing",
    "jax._src.util",

    # TODO(slebedev): Update the code and remove these.
    "jax.numpy",
    "jax.tree_util",
]
use_parentheses = true
